Upgrading to java17 as minimum
Signed-off-by: Haroon Sheikh <haroon.sheikh@sky.uk>